Remove Premium from services section title

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -238,7 +238,7 @@
       <div class="text-center mb-10 sm:mb-20">
         <h2 class="serif-text text-primary text-3xl sm:text-4xl lg:text-5xl font-bold mb-4" data-i18n="services.title">
           Nuestros
-          Servicios Premium</h2>
+          Servicios</h2>
         <div class="w-24 h-1 bg-primary mx-auto mb-6"></div>
         <p class="text-charcoal/60 max-w-2xl mx-auto text-base sm:text-lg" data-i18n="services.subtitle">Cuidamos cada
           detalle para
