Restore original full website structure

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -232,6 +232,56 @@
     }
   </script>
 
+  <!-- Hero Section -->
+<section class="relative h-screen w-full flex items-center overflow-hidden">
+<div class="absolute inset-0 z-0">
+<div class="absolute inset-0 bg-black/30 z-10"></div>
+<img alt="Luxury Mallorcan garden with stone pathways and bougainvillea" class="w-full h-full object-cover scale-105" data-alt="Luxurious Mediterranean garden with stone paths and vibrant flowers" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAdyHW0R6eT-oQufKjyb-wVMA6DjLsNY1jwrFQ0AfU8wWvplTPQXTnv_4RSjQgz7lg-a22NhU0ejVWYZQNtj608n0SoKdE1muGySuHPnWsOHmViopGGAmOcoRDcSaZiVFmFOtSUxQuIJK2x2IcY5cq5x4X8A0lBSQrolDNqy9ZYbVqEzXXSPdAMRKTUZcwHSj65uJdPZXQD3mIIbvPHdkThRolgR_tUS5UgR17MoCwy55jWleESfTbvh9h1BUgqy6-DkX7oYODSonN0"/>
+</div>
+<div class="relative z-20 max-w-7xl mx-auto px-6 lg:px-12 w-full pt-20">
+<div class="max-w-3xl">
+<h1 class="serif-text text-white text-5xl lg:text-7xl font-black leading-tight mb-6">
+                    Transformamos tu propiedad en un paraíso mediterráneo
+                </h1>
+<p class="text-white/90 text-lg lg:text-xl font-light mb-10 max-w-xl leading-relaxed">
+                    Servicios exclusivos de paisajismo y mantenimiento integral en Mallorca. Calidad premium para las propiedades más exigentes del archipiélago.
+                </p>
+<div class="flex flex-col sm:flex-row gap-4">
+<button class="bg-primary text-white px-8 py-4 rounded-lg font-bold hover:bg-primary/90 transition-all text-lg shadow-xl">
+                        Solicitar Presupuesto
+                    </button>
+<button class="border-2 border-white text-white px-8 py-4 rounded-lg font-bold hover:bg-white/10 transition-all text-lg backdrop-blur-sm">
+                        Ver Proyectos
+                    </button>
+</div>
+</div>
+</div>
+<!-- Trust Badges -->
+<div class="absolute bottom-0 left-0 w-full bg-white/5 backdrop-blur-md border-t border-white/10 py-8 z-20">
+<div class="max-w-7xl mx-auto px-6 lg:px-12 flex flex-wrap justify-between items-center gap-8">
+<div class="flex flex-col">
+<span class="text-white text-3xl font-bold tracking-tight">15+ Años</span>
+<span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Experiencia Local</span>
+</div>
+<div class="w-px h-10 bg-white/20 hidden md:block"></div>
+<div class="flex flex-col">
+<span class="text-white text-3xl font-bold tracking-tight">500+ Propiedades</span>
+<span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Gestionadas con Éxito</span>
+</div>
+<div class="w-px h-10 bg-white/20 hidden md:block"></div>
+<div class="flex flex-col">
+<span class="text-white text-3xl font-bold tracking-tight">100%</span>
+<span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Satisfacción Clientes</span>
+</div>
+<div class="w-px h-10 bg-white/20 hidden md:block"></div>
+<div class="flex flex-col">
+<span class="text-white text-3xl font-bold tracking-tight">Mallorca</span>
+<span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Cobertura Integral</span>
+</div>
+</div>
+</div>
+</section>
+
   <!-- Services Section -->
   <section class="pt-28 sm:pt-32 pb-12 sm:pb-24 bg-background-light" id="servicios">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
@@ -355,6 +405,212 @@
       </div>
     </div>
   </section>
+
+  <!-- Why VerdeAgua -->
+<section class="py-24 bg-primary text-white overflow-hidden relative">
+<div class="absolute right-0 top-0 opacity-10 pointer-events-none">
+<span class="material-symbols-outlined text-[400px]">eco</span>
+</div>
+<div class="max-w-7xl mx-auto px-6 lg:px-12 relative z-10">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+<div>
+<h2 class="serif-text text-4xl lg:text-5xl font-bold mb-8">Por qué elegir la excelencia de VerdeAgua</h2>
+<p class="text-white/80 text-lg mb-12 leading-relaxed">
+                        Entendemos que su propiedad en Mallorca es más que una casa; es un refugio. Nuestro equipo de profesionales altamente cualificados garantiza un servicio discreto, eficiente y de calidad insuperable.
+                    </p>
+<div class="grid grid-cols-2 gap-8">
+<div>
+<span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">verified_user</span>
+<h4 class="text-xl font-bold mb-2">Garantía Premium</h4>
+<p class="text-white/60 text-sm">Compromiso total con la calidad y los plazos acordados.</p>
+</div>
+<div>
+<span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">schedule</span>
+<h4 class="text-xl font-bold mb-2">24h Respuesta</h4>
+<p class="text-white/60 text-sm">Atención inmediata para cualquier incidencia técnica.</p>
+</div>
+<div>
+<span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">local_florist</span>
+<h4 class="text-xl font-bold mb-2">Eco-Consciente</h4>
+<p class="text-white/60 text-sm">Uso responsable del agua y productos biodegradables.</p>
+</div>
+<div>
+<span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">lock</span>
+<h4 class="text-xl font-bold mb-2">Privacidad</h4>
+<p class="text-white/60 text-sm">Protocolos estrictos de discreción y seguridad.</p>
+</div>
+</div>
+</div>
+<div class="relative">
+<div class="rounded-2xl overflow-hidden shadow-2xl rotate-3">
+<img alt="Luxury villa maintenance team at work" class="w-full h-[500px] object-cover" data-alt="Professional landscaping team working on a high-end estate" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBp1tc1UevCq0xd53m3imFr1rIInXEjt7-KxBf__JJ0ozAa1518XEq8CvHMzUwGkWB5jxVS2duAPF-F8E2q7TNh2apBEqn4pzoFnii7Bg7Pr5c14KfYBR2h5TWqwY0ZTJQrL04u1f73mImjF5ehtIDUR9FlBrVBrIu5gO3MvsZg_srbI9_c6NSy6TJ5WhMwc98QEFbFjPUAendmwUEEKHa5F75PkqQ_f_BjswjWXBn4aAMvtIIwq8uVzWtvIip6SThdVu-mVotHWBQT"/>
+</div>
+<div class="absolute -bottom-6 -left-6 bg-sandstone text-primary p-8 rounded-xl shadow-xl -rotate-3 border border-primary/10">
+<div class="text-5xl font-black mb-1">98%</div>
+<div class="text-sm font-bold uppercase tracking-widest opacity-70">Tasa de Retención</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- Portfolio Grid -->
+<section class="py-24 bg-background-light" id="proyectos">
+<div class="max-w-7xl mx-auto px-6 lg:px-12">
+<div class="flex flex-col md:flex-row justify-between items-end mb-16 gap-6">
+<div class="max-w-2xl">
+<h2 class="serif-text text-primary text-4xl font-bold mb-4">Proyectos Destacados</h2>
+<p class="text-charcoal/60 text-lg">Una mirada a algunas de las transformaciones más exclusivas realizadas en Deià, Sóller, Andratx y Calvià.</p>
+</div>
+<button class="flex items-center gap-2 font-bold text-primary group">
+                    Explorar Galería Completa 
+                    <span class="material-symbols-outlined group-hover:translate-x-1 transition-transform">arrow_right_alt</span>
+</button>
+</div>
+<div class="masonry-grid">
+<div class="relative group overflow-hidden rounded-xl masonry-item-tall shadow-lg">
+<img alt="Villa in Deià" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" data-alt="Stunning luxury villa in the mountains of Deià" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBVCJQ0BWHZCma-MtAlBg6xP6oXaMJ7xebeB8U7E-nSOUvlqtRbSxSKiNIFcHqJ7TYcHY2LlttNI6NIfD_zMiud6Iad5aNvd6f021BFBjdIHQHnwBZ62etEiqU8pam_jQpqTsLSSbwN3XxRtBstgoisW5oNOCPJAm2xxe-25APAWeznxDvUV7KIi-yQqJNne7oVSptDDV3qG2FSoOX20oTQiuKPsHJVDwbzCpouBrkWNbzTBggz-hHg-JG5tWnQdHOUQXQi4gRX0hC3"/>
+<div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
+<p class="text-white font-bold text-xl">Villa Alcanada</p>
+<p class="text-white/70 text-sm italic">Paisajismo y Piscina</p>
+</div>
+</div>
+<div class="relative group overflow-hidden rounded-xl shadow-lg">
+<img alt="Estate in Port Andratx" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" data-alt="Luxury estate garden with sea views in Port Andratx" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCiL2U0MaRVYPMhT2kLYLrpWHCP9usbvceW1Wo_qEs6YPPk8lKLp-ylRbhYOgS-RP002eVesfNfq-yV-7xKNh8lLHeomP79FyCAOLDxg6IgwET5tjwLSx4XZWItzWQDLaWl3DaBF54YfK0e9lDQPyVwkA0Q9nJwWEi0p3rRasM0hssPSFfaPT_mWGl6cluOpHRUNEX8or_2nTzoNNZ8fqyoQRKpj5cCJgWIa699Yiku-VZF5QNsVaHByZmO9aT_x2u8cG-7Z5X-XqbT"/>
+<div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
+<p class="text-white font-bold text-xl">The Cliff House</p>
+<p class="text-white/70 text-sm italic">Mantenimiento Integral</p>
+</div>
+</div>
+<div class="relative group overflow-hidden rounded-xl shadow-lg">
+<img alt="Garden in Sóller" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" data-alt="Traditional stone garden with citrus trees in Sóller" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC0ONBqyRuu5TtpdXgzfqfbq1jJ33WSE8CVbuA0kJaiw8poMcYJ1MAFn---edB9m33FNy7wd3BjzZFAWz9LowbkYHhn4H60NG6rFsI7M0NQB1gJvYtx1To4oG50ivYW9CYKpC4L1KWsphrWBYFzKVYk6CsTp8DfdZ4jgVFBXrcSr1WR0GnzY1Mjnl5e81wa92xRnAyJoTpab8pXtixU3fB-jMi5NujgtstUlA8ARsq3vqYHXGVFHcIei0FXqARo4e8JXgdqsm4_4F0_"/>
+<div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
+<p class="text-white font-bold text-xl">Finca Sa Vinyassa</p>
+<p class="text-white/70 text-sm italic">Reforma Exterior</p>
+</div>
+</div>
+<div class="relative group overflow-hidden rounded-xl masonry-item-tall shadow-lg">
+<img alt="Mansion in Calvià" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" data-alt="Ultra-modern mansion garden with architectural lighting" src="https://lh3.googleusercontent.com/aida-public/AB6AXuA-XfyACr1QW83ZBx9g922HJ6Vmfv_kJOCwaVTduVE4y7XwE0ni2cTZ_bZfxOzqv8NcggdTAQf9cqjRftMjUgvdusJDR6LZUdpG857D_L2P3W3vci8jbpJEp6rMrwMMRrcPxTdtq508EnnAf9uKgJmQDSiIBkHOgR-rsDpayi-OmkY6nXzW4bbBpauirWufz8Y1YXCcVuJREefKcu-BM12C2rQArnOlFfUBYE5udn13Bp1KehoUuLnPYlIe80Y9GFHCorHzlHLXJh2O"/>
+<div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
+<p class="text-white font-bold text-xl">Estate Son Vida</p>
+<p class="text-white/70 text-sm italic">Paisajismo de Vanguardia</p>
+</div>
+</div>
+<div class="relative group overflow-hidden rounded-xl shadow-lg">
+<img alt="Patio renovation" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" data-alt="Cozy Mediterranean patio with white stone and bougainvillea" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAPOCWW4lve1t6535eoxT4tNbyfrxlLCz1EAZB2W2DquxmUosidhwe8fk1KYut9MUmJKxzAFbCSgwlBFDNJo7eYCDBXY__zOCfR4HDHod5ufhnwjZjHH-T8kAmylBlID6j8qPApu_GXOma_sJiUjdX2aqzO7Vkq9YqkXZ01dablpgAajZm9rOdTvTKSJUmrQ6je1C4C1BVnucZKYvQZe5EhZIVneZVrq_wyExjoY9wJp3QutpshxfTtuAXdb_-WQvU3WgdnaDl007Ho"/>
+<div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition-opacity p-6 flex flex-col justify-end">
+<p class="text-white font-bold text-xl">Patio de Palma</p>
+<p class="text-white/70 text-sm italic">Renovación Histórica</p>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- Pricing Section -->
+<section class="py-24 bg-sandstone" id="tarifas">
+<div class="max-w-7xl mx-auto px-6 lg:px-12">
+<div class="text-center mb-20">
+<h2 class="serif-text text-primary text-4xl font-bold mb-4">Planes de Mantenimiento</h2>
+<p class="text-charcoal/60 max-w-xl mx-auto">Seleccione el nivel de cuidado que mejor se adapte a sus necesidades y a la magnitud de su propiedad.</p>
+</div>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-start">
+<!-- Plan 1 -->
+<div class="bg-white p-10 rounded-2xl shadow-sm border border-primary/5">
+<h3 class="serif-text text-2xl font-bold mb-2">Básico</h3>
+<div class="flex items-baseline gap-1 mb-8">
+<span class="text-4xl font-bold text-primary">150€</span>
+<span class="text-charcoal/40 text-sm">/mes</span>
+</div>
+<ul class="space-y-4 mb-10 text-charcoal/70">
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Jardinería quincenal</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Limpieza básica piscina</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Gestión de residuos</li>
+<li class="flex items-center gap-3 text-charcoal/30"><span class="material-symbols-outlined text-lg">cancel</span> Respuesta 24h</li>
+</ul>
+<button class="w-full border-2 border-primary text-primary font-bold py-3 rounded-lg hover:bg-primary hover:text-white transition-all">Solicitar Plan</button>
+</div>
+<!-- Plan 2 - Featured -->
+<div class="bg-primary p-12 rounded-2xl shadow-2xl transform scale-105 relative z-10 text-white">
+<div class="absolute top-0 right-10 transform -translate-y-1/2 bg-sandstone text-primary px-4 py-1 rounded-full text-xs font-black uppercase tracking-widest">Más Popular</div>
+<h3 class="serif-text text-3xl font-bold mb-2">Premium</h3>
+<div class="flex items-baseline gap-1 mb-8">
+<span class="text-5xl font-bold">350€</span>
+<span class="text-white/60 text-sm">/mes</span>
+</div>
+<ul class="space-y-4 mb-10 text-white/90">
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-background-light/40 text-lg">check_circle</span> Jardinería semanal</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-background-light/40 text-lg">check_circle</span> Mantenimiento técnico piscina</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-background-light/40 text-lg">check_circle</span> Poda de temporada</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-background-light/40 text-lg">check_circle</span> Respuesta prioritaria 24h</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-background-light/40 text-lg">check_circle</span> Tratamientos fitosanitarios</li>
+</ul>
+<button class="w-full bg-white text-primary font-bold py-4 rounded-lg hover:bg-sandstone transition-all text-lg shadow-lg">Solicitar Plan</button>
+</div>
+<!-- Plan 3 -->
+<div class="bg-white p-10 rounded-2xl shadow-sm border border-primary/5">
+<h3 class="serif-text text-2xl font-bold mb-2">Integral</h3>
+<div class="flex items-baseline gap-1 mb-8">
+<span class="text-4xl font-bold text-primary">650€</span>
+<span class="text-charcoal/40 text-sm">/mes</span>
+</div>
+<ul class="space-y-4 mb-10 text-charcoal/70">
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Gestión de finca 24/7</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Piscina y Spas</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Reformas menores incluidas</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Key Holding &amp; Concierge</li>
+<li class="flex items-center gap-3"><span class="material-symbols-outlined text-primary text-lg">check_circle</span> Informes técnicos mensuales</li>
+</ul>
+<button class="w-full border-2 border-primary text-primary font-bold py-3 rounded-lg hover:bg-primary hover:text-white transition-all">Solicitar Plan</button>
+</div>
+</div>
+</div>
+</section>
+<!-- Testimonials -->
+<section class="py-24 bg-background-light">
+<div class="max-w-7xl mx-auto px-6 lg:px-12">
+<h2 class="serif-text text-3xl font-bold mb-16 text-center">Nuestros Clientes Dicen</h2>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+<div class="bg-sandstone/30 p-8 rounded-xl border border-primary/5 italic">
+<div class="flex gap-1 mb-4 text-primary">
+<span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span>
+</div>
+<p class="text-charcoal/80 mb-6 leading-relaxed">"El equipo de VerdeAgua ha transformado por completo nuestro jardín en Sóller. Su atención al detalle es excepcional."</p>
+<div class="flex items-center gap-4">
+<div class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center font-bold text-primary">MW</div>
+<div>
+<p class="text-sm font-bold not-italic">Michael Weber</p>
+<p class="text-xs text-charcoal/40 not-italic">Propiedad en Sóller</p>
+</div>
+</div>
+</div>
+<div class="bg-sandstone/30 p-8 rounded-xl border border-primary/5 italic">
+<div class="flex gap-1 mb-4 text-primary">
+<span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span>
+</div>
+<p class="text-charcoal/80 mb-6 leading-relaxed">"Confianza total. Dejamos las llaves de nuestra villa en Deià y al volver todo está impecable. Profesionalidad al más alto nivel."</p>
+<div class="flex items-center gap-4">
+<div class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center font-bold text-primary">EL</div>
+<div>
+<p class="text-sm font-bold not-italic">Elena Llopis</p>
+<p class="text-xs text-charcoal/40 not-italic">Residencia en Deià</p>
+</div>
+</div>
+</div>
+<div class="bg-sandstone/30 p-8 rounded-xl border border-primary/5 italic">
+<div class="flex gap-1 mb-4 text-primary">
+<span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span><span class="material-symbols-outlined text-sm">star</span>
+</div>
+<p class="text-charcoal/80 mb-6 leading-relaxed">"Su capacidad para entender el entorno mediterráneo es única. Mi piscina y jardín nunca han lucido mejor."</p>
+<div class="flex items-center gap-4">
+<div class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center font-bold text-primary">JH</div>
+<div>
+<p class="text-sm font-bold not-italic">Julian Hart</p>
+<p class="text-xs text-charcoal/40 not-italic">Villa en Port Andratx</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-charcoal text-white pt-12 sm:pt-24 pb-8 sm:pb-12">
