Replace Saber más with Solicitar Presupuesto buttons linking to category quotes

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -321,10 +321,10 @@
               </div>
 
             </div>
-            <div class="flex items-center gap-2 text-primary font-bold text-sm">
-              <span data-i18n="svc.more">Saber más</span> <span
-                class="material-symbols-outlined text-sm">arrow_forward</span>
-            </div>
+            <a href="presupuesto.html?servicio=Jardinería"
+              class="inline-flex items-center gap-2 bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-bold hover:bg-primary/90 transition-all shadow-sm no-underline"
+              data-i18n="svc.cta">Solicitar Presupuesto <span
+                class="material-symbols-outlined text-sm">arrow_forward</span></a>
           </div>
         </div>
         <!-- Service 2 -->
@@ -347,10 +347,10 @@
               </div>
 
             </div>
-            <div class="flex items-center gap-2 text-primary font-bold text-sm">
-              <span data-i18n="svc.more">Saber más</span> <span
-                class="material-symbols-outlined text-sm">arrow_forward</span>
-            </div>
+            <a href="presupuesto.html?servicio=Piscinas"
+              class="inline-flex items-center gap-2 bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-bold hover:bg-primary/90 transition-all shadow-sm no-underline"
+              data-i18n="svc.cta">Solicitar Presupuesto <span
+                class="material-symbols-outlined text-sm">arrow_forward</span></a>
           </div>
         </div>
         <!-- Service 3 -->
@@ -372,10 +372,10 @@
               </div>
 
             </div>
-            <div class="flex items-center gap-2 text-primary font-bold text-sm">
-              <span data-i18n="svc.more">Saber más</span> <span
-                class="material-symbols-outlined text-sm">arrow_forward</span>
-            </div>
+            <a href="presupuesto.html?servicio=Reformas"
+              class="inline-flex items-center gap-2 bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-bold hover:bg-primary/90 transition-all shadow-sm no-underline"
+              data-i18n="svc.cta">Solicitar Presupuesto <span
+                class="material-symbols-outlined text-sm">arrow_forward</span></a>
           </div>
         </div>
         <!-- Service 4 -->
@@ -397,10 +397,10 @@
               </div>
 
             </div>
-            <div class="flex items-center gap-2 text-primary font-bold text-sm">
-              <span data-i18n="svc.more">Saber más</span> <span
-                class="material-symbols-outlined text-sm">arrow_forward</span>
-            </div>
+            <a href="presupuesto.html?servicio=Mantenimiento"
+              class="inline-flex items-center gap-2 bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-bold hover:bg-primary/90 transition-all shadow-sm no-underline"
+              data-i18n="svc.cta">Solicitar Presupuesto <span
+                class="material-symbols-outlined text-sm">arrow_forward</span></a>
           </div>
         </div>
       </div>
