Rename service 4 to Mantenimiento with updated description

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -389,11 +389,9 @@
           <div class="p-8">
             <div class="flex justify-between items-start mb-4">
               <div>
-                <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.4.title">Gestión Integral
-                  24/7</h3>
-                <p class="text-charcoal/60 leading-relaxed" data-i18n="svc.4.desc">Cuidado total de su propiedad durante
-                  todo el año, llave en
-                  mano y emergencias.</p>
+                <h3 class="serif-text text-2xl font-bold text-primary mb-2" data-i18n="svc.4.title">Mantenimiento</h3>
+                <p class="text-charcoal/60 leading-relaxed" data-i18n="svc.4.desc">Cuidado integral de su propiedad 365
+                  días al año: jardinería, piscina, limpieza, gestión de llaves y atención de emergencias.</p>
               </div>
 
             </div>
