Add Sobre Nosotros section with Sebastian Yarzon intro and nav links

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -147,6 +147,8 @@
       <div class="hidden lg:flex items-center gap-10">
         <a class="text-sm font-medium hover:text-primary transition-colors" href="#servicios"
           data-i18n="nav.servicios">Servicios</a>
+        <a class="text-sm font-medium hover:text-primary transition-colors" href="#nosotros"
+          data-i18n="nav.nosotros">Sobre Nosotros</a>
         <a class="text-sm font-medium hover:text-primary transition-colors" href="presupuesto.html"
           data-i18n="nav.presupuesto">Presupuesto</a>
         <a class="text-sm font-medium hover:text-primary transition-colors" href="contacto.html"
@@ -199,6 +201,9 @@
       <a href="#servicios" onclick="toggleMobileMenu()"
         class="block text-lg font-semibold text-primary hover:text-primary/70 transition-colors"
         data-i18n="nav.servicios">Servicios</a>
+      <a href="#nosotros" onclick="toggleMobileMenu()"
+        class="block text-lg font-semibold text-primary hover:text-primary/70 transition-colors"
+        data-i18n="nav.nosotros">Sobre Nosotros</a>
       <a href="presupuesto.html"
         class="block text-lg font-semibold text-primary hover:text-primary/70 transition-colors"
         data-i18n="nav.presupuesto">Presupuesto</a>
@@ -399,6 +404,66 @@
               class="inline-flex items-center gap-2 bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-bold hover:bg-primary/90 transition-all shadow-sm no-underline"
               data-i18n="svc.cta">Solicitar Presupuesto <span
                 class="material-symbols-outlined text-sm">arrow_forward</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sobre Nosotros -->
+  <section class="py-16 sm:py-24 bg-sandstone" id="nosotros">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-20 items-center">
+        <div class="relative">
+          <div class="rounded-2xl overflow-hidden shadow-2xl">
+            <img alt="Sebastian Yarzon - Fundador de VerdeAgua" class="w-full h-[400px] sm:h-[500px] object-cover"
+              src="https://lh3.googleusercontent.com/aida-public/AB6AXuCOrdQZMBVl06xYKymSpmUYh4WtnbeqUv34KcGWX_lW8kTsMILUtdSvB0seRuZJ_g-zpGHrgRcVB083hMTbydnPoKDsuBRmioYOLwPy_BMn0sPIXKlW_ZemHjC9YKrD0hGj9HJywHTjFNCSWef8kOFbGGqtKGWKsfAZY4zVGi_68bG_LnexTGIq5HJtwl0T0CR2B2SVo2ikPcTyYBQnnypT8M-EAmImFcpzZD7lhWKEX1TNzYwn9NciM1W58kgIPSmkV8CPPc8jXH99" />
+          </div>
+          <div class="absolute -bottom-4 -right-4 bg-primary text-white p-5 sm:p-6 rounded-xl shadow-xl">
+            <div class="text-3xl sm:text-4xl font-black mb-1">+10</div>
+            <div class="text-xs font-bold uppercase tracking-widest text-white/70" data-i18n="about.years">Años de
+              experiencia</div>
+          </div>
+        </div>
+        <div>
+          <h2 class="serif-text text-primary text-3xl sm:text-4xl lg:text-5xl font-bold mb-6" data-i18n="about.title">
+            Sobre Nosotros</h2>
+          <div class="w-16 h-1 bg-primary mb-8"></div>
+          <p class="text-charcoal/80 text-lg leading-relaxed mb-6" data-i18n="about.intro">
+            Soy Sebastian Yarzon, fundador de VerdeAgua. Con más de 10 años de experiencia en el cuidado de propiedades
+            en Mallorca, conozco cada rincón de esta isla y entiendo lo que tu hogar necesita para lucir siempre
+            perfecto.
+          </p>
+          <p class="text-charcoal/60 text-base leading-relaxed mb-8" data-i18n="about.desc">
+            Trabajamos principalmente en la zona centro-sur y poniente de Mallorca — desde Palma hasta Calvià, Andratx y
+            Santa Ponça. Nuestro equipo trata cada propiedad como si fuera propia: con cercanía, responsabilidad y la
+            atención al detalle que solo da la experiencia sobre el terreno.
+          </p>
+          <div class="flex flex-wrap gap-4">
+            <div class="flex items-center gap-3 bg-white px-5 py-3 rounded-xl shadow-sm border border-primary/5">
+              <span class="material-symbols-outlined text-primary">location_on</span>
+              <div>
+                <p class="text-xs font-bold text-primary/40 uppercase tracking-wider" data-i18n="about.zone.label">Zona
+                </p>
+                <p class="font-bold text-primary text-sm" data-i18n="about.zone">Poniente & Centro-Sur</p>
+              </div>
+            </div>
+            <div class="flex items-center gap-3 bg-white px-5 py-3 rounded-xl shadow-sm border border-primary/5">
+              <span class="material-symbols-outlined text-primary">groups</span>
+              <div>
+                <p class="text-xs font-bold text-primary/40 uppercase tracking-wider" data-i18n="about.team.label">
+                  Equipo</p>
+                <p class="font-bold text-primary text-sm" data-i18n="about.team">Profesionales locales</p>
+              </div>
+            </div>
+            <div class="flex items-center gap-3 bg-white px-5 py-3 rounded-xl shadow-sm border border-primary/5">
+              <span class="material-symbols-outlined text-primary">handshake</span>
+              <div>
+                <p class="text-xs font-bold text-primary/40 uppercase tracking-wider" data-i18n="about.value.label">
+                  Valores</p>
+                <p class="font-bold text-primary text-sm" data-i18n="about.value">Cercanía y confianza</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
