Remove all Premium references across entire site

--- a/VERDEAGUA/site/public/aviso-legal.html
+++ b/VERDEAGUA/site/public/aviso-legal.html
@@ -78,7 +78,7 @@
             <section>
                 <h2 class="text-xl font-bold text-primary mb-4" data-i18n="legal.s1">1. Datos identificativos</h2>
                 <div class="bg-sandstone/50 rounded-xl p-6 space-y-2">
-                    <p><strong data-i18n="legal.s1.name">Denominación social:</strong> VerdeAgua Premium Property
+                    <p><strong data-i18n="legal.s1.name">Denominación social:</strong> VerdeAgua Property
                         Services</p>
                     <p><strong data-i18n="legal.s1.address">Domicilio:</strong> <span
                             data-i18n="legal.s1.addressVal">Mallorca, Islas Baleares, España</span></p>
@@ -94,7 +94,7 @@
                 <h2 class="text-xl font-bold text-primary mb-4" data-i18n="legal.s2">2. Objeto</h2>
                 <p data-i18n="legal.s2.p1">El presente aviso legal regula el uso del sitio web
                     <strong>verdeagua.net</strong> (en adelante, el
-                    "Sitio Web"), del que es titular VerdeAgua Premium Property Services (en adelante, "VerdeAgua").
+                    "Sitio Web"), del que es titular VerdeAgua Property Services (en adelante, "VerdeAgua").
                 </p>
                 <p class="mt-3" data-i18n="legal.s2.p2">La navegación por el Sitio Web atribuye la condición de usuario
                     del mismo e implica la
