--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -252,7 +252,7 @@
           Transformamos tu propiedad en un paraíso mediterráneo
         </h1>
         <p class="text-white/90 text-lg lg:text-xl font-light mb-10 max-w-xl leading-relaxed">
-          Servicios exclusivos de paisajismo y mantenimiento integral en Mallorca. Calidad premium para las propiedades
+          Servicios exclusivos de paisajismo y mantenimiento integral en Mallorca. Calidad superior para las propiedades
           más exigentes del archipiélago.
         </p>
         <div class="flex flex-col sm:flex-row gap-4">
@@ -478,7 +478,7 @@
           <div class="grid grid-cols-2 gap-8">
             <div>
               <span class="material-symbols-outlined text-4xl mb-4 text-background-light/40">verified_user</span>
-              <h4 class="text-xl font-bold mb-2">Garantía Premium</h4>
+              <h4 class="text-xl font-bold mb-2">Garantía de Calidad</h4>
               <p class="text-white/60 text-sm">Compromiso total con la calidad y los plazos acordados.</p>
             </div>
             <div>
@@ -621,7 +621,7 @@
           <div
             class="absolute top-0 right-10 transform -translate-y-1/2 bg-sandstone text-primary px-4 py-1 rounded-full text-xs font-black uppercase tracking-widest">
             Más Popular</div>
-          <h3 class="serif-text text-3xl font-bold mb-2">Premium</h3>
+          <h3 class="serif-text text-3xl font-bold mb-2">Profesional</h3>
           <div class="flex items-baseline gap-1 mb-8">
             <span class="text-5xl font-bold">350€</span>
             <span class="text-white/60 text-sm">/mes</span>
@@ -903,7 +903,7 @@
             <span class="material-symbols-outlined">close</span>
           </button>
           <h3 class="serif-text text-2xl font-bold" id="modalTitle">Solicitar Plan</h3>
-          <p class="text-white/70 text-sm mt-1">Mantenimiento <span id="modalPlanName">Premium</span> — <span
+          <p class="text-white/70 text-sm mt-1">Mantenimiento <span id="modalPlanName">Profesional</span> — <span
               id="modalPlanPrice">350€/mes</span></p>
         </div>
         <div class="p-6 space-y-4">
