--- a/VERDEAGUA/site/public/privacidad.html
+++ b/VERDEAGUA/site/public/privacidad.html
@@ -79,7 +79,7 @@
             <section>
                 <h2 class="text-xl font-bold text-primary mb-4" data-i18n="priv.s1">1. Responsable del tratamiento</h2>
                 <div class="bg-sandstone/50 rounded-xl p-6 space-y-2">
-                    <p><strong data-i18n="priv.s1.resp">Responsable:</strong> VerdeAgua Premium Property Services</p>
+                    <p><strong data-i18n="priv.s1.resp">Responsable:</strong> VerdeAgua Property Services</p>
                     <p><strong data-i18n="priv.s1.email">Email de contacto:</strong> <a
                             href="mailto:info@verdeaguamallorca.es"
                             class="text-primary font-semibold hover:underline">info@verdeaguamallorca.es</a></p>
