--- a/VERDEAGUA/site/public/presupuesto.html
+++ b/VERDEAGUA/site/public/presupuesto.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>VerdeAgua Premium Quote Request Form</title>
+    <title>VerdeAgua Quote Request Form</title>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -456,7 +456,7 @@
                             </div>
                             <div class="flex items-center gap-3 text-primary/70">
                                 <span class="material-symbols-outlined text-accent">local_activity</span>
-                                <span class="text-sm font-medium" data-i18n="pres.sidebar.quality">Calidad Premium
+                                <span class="text-sm font-medium" data-i18n="pres.sidebar.quality">Calidad
                                     Garantizada</span>
                             </div>
                         </div>
@@ -508,7 +508,7 @@
             <div class="flex items-center gap-3 opacity-50">
                 <img src="logo-nav.png" alt="VerdeAgua Logo" class="h-20 w-auto">
             </div>
-            <p class="text-primary/40 text-sm" data-i18n="footer.rights">© 2026 VerdeAgua Premium Property Services
+            <p class="text-primary/40 text-sm" data-i18n="footer.rights">© 2026 VerdeAgua Property Services
                 Mallorca. Todos los derechos
                 reservados.</p>
             <div class="flex items-center gap-2 text-primary/40 text-sm">
