Update trust badges to realistic values for new business

--- a/VERDEAGUA/site/public/index.html
+++ b/VERDEAGUA/site/public/index.html
@@ -271,23 +271,23 @@
     <div class="absolute bottom-0 left-0 w-full bg-white/5 backdrop-blur-md border-t border-white/10 py-8 z-20">
       <div class="max-w-7xl mx-auto px-6 lg:px-12 flex flex-wrap justify-between items-center gap-8">
         <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">15+ Años</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Experiencia Local</span>
+          <span class="text-white text-3xl font-bold tracking-tight">10+ Años</span>
+          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Experiencia en el Sector</span>
         </div>
         <div class="w-px h-10 bg-white/20 hidden md:block"></div>
         <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">500+ Propiedades</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Gestionadas con Éxito</span>
+          <span class="text-white text-3xl font-bold tracking-tight">Zona Poniente</span>
+          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Centro-Sur de Mallorca</span>
         </div>
         <div class="w-px h-10 bg-white/20 hidden md:block"></div>
         <div class="flex flex-col">
-          <span class="text-white text-3xl font-bold tracking-tight">100%</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Satisfacción Clientes</span>
+          <span class="text-white text-3xl font-bold tracking-tight">Compromiso</span>
+          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Atención Personalizada</span>
         </div>
         <div class="w-px h-10 bg-white/20 hidden md:block"></div>
         <div class="flex flex-col">
           <span class="text-white text-3xl font-bold tracking-tight">Mallorca</span>
-          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Cobertura Integral</span>
+          <span class="text-white/60 text-xs uppercase tracking-widest font-semibold">Servicio Local</span>
         </div>
       </div>
     </div>
